# mtl-protein-disorder

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
mtl_protein_disorder/: __init__.py  inference.py  train.py
