[tool.poetry]
name = "mtl-protein-disorder"
version = "0.1.0"
description = "Multi-Task Learning Network for Protein Disorder Prediction with cross-platform support (CUDA, MPS, CPU). This package implements joint prediction of intrinsic disorder (binary) and per-residue flexibility (regression) using a simple feedforward neural network."
authors = ["Daryna Sova <daryna.sova@tum.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DarynaSova/mtl-protein-disorder"
repository = "https://github.com/DarynaSova/mtl-protein-disorder"
keywords = ["protein", "disorder", "multi-task-learning", "deep-learning", "pytorch"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = ">=2.0.0"
numpy = ">=1.24.0,<2.0.0"
scipy = ">=1.10.0"
scikit-learn = ">=1.3.0"
pandas = "^2.3.3"
joblib = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
ipython = "^8.14.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
mtl-train = "mtl_protein_disorder.train:main"
mtl-infer = "mtl_protein_disorder.inference:main"
mtl-generate-data = "mtl_protein_disorder.generate_data:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
